objects/Account_Affiliate__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts Affiliate</relationshipLabel>
        <relationshipName>Accounts_Affiliate</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Acquisition_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user who owned the same account in the acquisition organization</description>
        <label>Acquisition User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Affiliates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <label>Budget Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY- 2005 - budgeted</fullName>
                </value>
                <value>
                    <fullName>FY- 2006 - budgeted</fullName>
                </value>
                <value>
                    <fullName>Not budgeted</fullName>
                </value>
                <value>
                    <fullName>FY- 2007 - budgeted</fullName>
                </value>
                <value>
                    <fullName>FY- 2008-budgeted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Manager_Field__c</fullName>
        <label>Channel Manager Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adrian Larsen</fullName>
                </value>
                <value>
                    <fullName>Alexander Buenning</fullName>
                </value>
                <value>
                    <fullName>Ali Fuat Turkay</fullName>
                </value>
                <value>
                    <fullName>Bianca Stroebel</fullName>
                </value>
                <value>
                    <fullName>Brenda Parent</fullName>
                </value>
                <value>
                    <fullName>Clint Beasley</fullName>
                </value>
                <value>
                    <fullName>Colin Jones</fullName>
                </value>
                <value>
                    <fullName>Daniel Wolf</fullName>
                </value>
                <value>
                    <fullName>Danny Driscoll</fullName>
                </value>
                <value>
                    <fullName>David Byrne</fullName>
                </value>
                <value>
                    <fullName>David George</fullName>
                </value>
                <value>
                    <fullName>Denis Gadonnet</fullName>
                </value>
                <value>
                    <fullName>Frederic Benichou</fullName>
                </value>
                <value>
                    <fullName>Gabriel Byun</fullName>
                </value>
                <value>
                    <fullName>Gerald Hahn</fullName>
                </value>
                <value>
                    <fullName>Gerard Kerrigan</fullName>
                </value>
                <value>
                    <fullName>Guy Mammana</fullName>
                </value>
                <value>
                    <fullName>Henrik Davidsson</fullName>
                </value>
                <value>
                    <fullName>Hiro Wakiyama</fullName>
                </value>
                <value>
                    <fullName>James Lee</fullName>
                </value>
                <value>
                    <fullName>Jamie Andrews</fullName>
                </value>
                <value>
                    <fullName>Jim Hyman</fullName>
                </value>
                <value>
                    <fullName>Jochen Rummel</fullName>
                </value>
                <value>
                    <fullName>Jodge Padres</fullName>
                </value>
                <value>
                    <fullName>John Martens</fullName>
                </value>
                <value>
                    <fullName>John Quinn</fullName>
                </value>
                <value>
                    <fullName>Julie Wix</fullName>
                </value>
                <value>
                    <fullName>Kelly Beverly</fullName>
                </value>
                <value>
                    <fullName>Ken Lemay</fullName>
                </value>
                <value>
                    <fullName>Kittipong Tummanus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Additional Comments</description>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Stage__c</fullName>
        <label>Competitor Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incumbent - already installed</fullName>
                </value>
                <value>
                    <fullName>New - Pre-Eval</fullName>
                </value>
                <value>
                    <fullName>New - Pre-Purchase Testing</fullName>
                </value>
                <value>
                    <fullName>New - Purchase Contingency</fullName>
                </value>
                <value>
                    <fullName>New - Production - less than 90 days</fullName>
                </value>
                <value>
                    <fullName>New - Production - more than 90 days</fullName>
                </value>
                <value>
                    <fullName>Will not divulge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-Not Contacted</fullName>
                    <default>true</default>
                    <label>0-Not Contacted</label>
                </value>
                <value>
                    <fullName>10-Attempting</fullName>
                </value>
                <value>
                    <fullName>20-Working</fullName>
                </value>
                <value>
                    <fullName>30-Connect</fullName>
                </value>
                <value>
                    <fullName>40-Pending Project</fullName>
                </value>
                <value>
                    <fullName>50-Rep Engagement</fullName>
                </value>
                <value>
                    <fullName>70-Possible, f/up needed</fullName>
                </value>
                <value>
                    <fullName>80-Opportunity</fullName>
                </value>
                <value>
                    <fullName>90-Eval Agreement</fullName>
                </value>
                <value>
                    <fullName>Signed Partner</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>No Opportunity</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reseller Engaged</fullName>
                </value>
                <value>
                    <fullName>Signed Bonded Sender Partner</fullName>
                </value>
                <value>
                    <fullName>Subsidiary/Associate to Parent Account</fullName>
                </value>
                <value>
                    <fullName>Inactive Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_AS_Policy_Mgr__c</fullName>
        <label>Current Email Security 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActiveState PureMessage</fullName>
                </value>
                <value>
                    <fullName>Baracuda</fullName>
                </value>
                <value>
                    <fullName>Borderware</fullName>
                </value>
                <value>
                    <fullName>Brightmail</fullName>
                </value>
                <value>
                    <fullName>Can It Spam</fullName>
                </value>
                <value>
                    <fullName>CipherTrust</fullName>
                </value>
                <value>
                    <fullName>Cloudmark</fullName>
                </value>
                <value>
                    <fullName>Frontbridge-Outsourced</fullName>
                </value>
                <value>
                    <fullName>I Hate Spam</fullName>
                </value>
                <value>
                    <fullName>Kapersky</fullName>
                </value>
                <value>
                    <fullName>MailFrontier</fullName>
                </value>
                <value>
                    <fullName>MailMarshall</fullName>
                </value>
                <value>
                    <fullName>MailSweeper</fullName>
                </value>
                <value>
                    <fullName>Mail Washer</fullName>
                </value>
                <value>
                    <fullName>McAfee WebShield</fullName>
                </value>
                <value>
                    <fullName>Messagelabs</fullName>
                </value>
                <value>
                    <fullName>Messagelabs-Outsourced</fullName>
                </value>
                <value>
                    <fullName>Mirapoint</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Outsourced</fullName>
                </value>
                <value>
                    <fullName>Postini-Outsourced</fullName>
                </value>
                <value>
                    <fullName>Proofpoint</fullName>
                </value>
                <value>
                    <fullName>Puremessage (Sophos)</fullName>
                </value>
                <value>
                    <fullName>Roaring Penguin</fullName>
                </value>
                <value>
                    <fullName>Sendmail (SMI)</fullName>
                </value>
                <value>
                    <fullName>SpamAssassin</fullName>
                </value>
                <value>
                    <fullName>SurfControl</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Trend IMS</fullName>
                </value>
                <value>
                    <fullName>Tumbleweed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_AV__c</fullName>
        <label>Current Email Security 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baracuda</fullName>
                </value>
                <value>
                    <fullName>Borderware</fullName>
                </value>
                <value>
                    <fullName>CipherTrust</fullName>
                </value>
                <value>
                    <fullName>Clam AV</fullName>
                </value>
                <value>
                    <fullName>MailMarshall</fullName>
                </value>
                <value>
                    <fullName>Mailsweeper/MIMESweeper</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>McAfee GroupShield</fullName>
                </value>
                <value>
                    <fullName>Messagelabs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Proofpoint</fullName>
                </value>
                <value>
                    <fullName>Sophos</fullName>
                </value>
                <value>
                    <fullName>SurfControl</fullName>
                </value>
                <value>
                    <fullName>Sybari/Antigen</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Trend ISVW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Email_Filtering__c</fullName>
        <label>Current Email Filtering</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Web_Filtering__c</fullName>
        <label>Current Web Security 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Web_Solution__c</fullName>
        <label>Current Web Security 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8e6</fullName>
                </value>
                <value>
                    <fullName>Barracuda</fullName>
                </value>
                <value>
                    <fullName>BlueCoat</fullName>
                </value>
                <value>
                    <fullName>Finjan</fullName>
                </value>
                <value>
                    <fullName>Fortinet</fullName>
                </value>
                <value>
                    <fullName>IPrism</fullName>
                </value>
                <value>
                    <fullName>IronPort</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>MessageLabs</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>MxLogix</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PureWire</fullName>
                </value>
                <value>
                    <fullName>ScanSafe</fullName>
                </value>
                <value>
                    <fullName>Secure Computing</fullName>
                </value>
                <value>
                    <fullName>SonicWall</fullName>
                </value>
                <value>
                    <fullName>Sophos</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Webroot</fullName>
                </value>
                <value>
                    <fullName>WebSense</fullName>
                </value>
                <value>
                    <fullName>ZScaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Billing_Period__c</fullName>
        <label>Default Billing Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Preference__c</fullName>
        <description>Depoyment Preferred by Customer</description>
        <label>Deployment Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Security_Customer_Satisfaction__c</fullName>
        <description>Provides Customer Satifaction on Security Profile</description>
        <label>Email Security Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Happy with solution no need to change</fullName>
                </value>
                <value>
                    <fullName>Would change - cost issue</fullName>
                </value>
                <value>
                    <fullName>Would change - funcational issue</fullName>
                </value>
                <value>
                    <fullName>Would change - other issue</fullName>
                </value>
                <value>
                    <fullName>Would change - perf issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Security_Renewal_Date__c</fullName>
        <description>Date when Profile service is up for Renewal</description>
        <label>Email Security Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Security__c</fullName>
        <description>Current Profile type deployed for this Account</description>
        <label>Email Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Barracuda</fullName>
                </value>
                <value>
                    <fullName>Cisco IronPort</fullName>
                </value>
                <value>
                    <fullName>Clearswift</fullName>
                </value>
                <value>
                    <fullName>Google Postini</fullName>
                </value>
                <value>
                    <fullName>M86 Security</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>Messaging Architects</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Mimecast</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PineApp</fullName>
                </value>
                <value>
                    <fullName>Proofpoint</fullName>
                </value>
                <value>
                    <fullName>SonicWall</fullName>
                </value>
                <value>
                    <fullName>Symantec Message Labs</fullName>
                </value>
                <value>
                    <fullName>Trend Micro</fullName>
                </value>
                <value>
                    <fullName>WatchGuard</fullName>
                </value>
                <value>
                    <fullName>Webroot Hosted</fullName>
                </value>
                <value>
                    <fullName>Websense Hosted</fullName>
                </value>
                <value>
                    <fullName>Z-Scaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Volume_Per_Day__c</fullName>
        <label>Email Volume Per Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;50K</fullName>
                </value>
                <value>
                    <fullName>50-100K</fullName>
                </value>
                <value>
                    <fullName>100K-500K</fullName>
                </value>
                <value>
                    <fullName>500K-1M</fullName>
                </value>
                <value>
                    <fullName>1M-5M</fullName>
                </value>
                <value>
                    <fullName>5M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Web_Users__c</fullName>
        <label>Email/Web Users</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>250-1000</fullName>
                </value>
                <value>
                    <fullName>1001-1500</fullName>
                </value>
                <value>
                    <fullName>1501-7500</fullName>
                </value>
                <value>
                    <fullName>7501-25,000</fullName>
                </value>
                <value>
                    <fullName>25,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_from_Dedicated_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email from Dedicated IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Growth__c</fullName>
        <label>Employee Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Existing_VC_Endpoint_Provider__c</fullName>
        <inlineHelpText>Insert existing endpoint supplier</inlineHelpText>
        <label>Existing VC Endpoint Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aethra</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Codian</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>LifeSize</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Polycom</fullName>
                </value>
                <value>
                    <fullName>RADvision</fullName>
                </value>
                <value>
                    <fullName>Sony</fullName>
                </value>
                <value>
                    <fullName>VCON</fullName>
                </value>
                <value>
                    <fullName>VTel</fullName>
                </value>
                <value>
                    <fullName>Kedacom</fullName>
                </value>
                <value>
                    <fullName>ZTE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_VC_Infrastructure_Provider__c</fullName>
        <label>Existing VC Infrastructure Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aethra</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Codian</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>LifeSize</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Polycom</fullName>
                </value>
                <value>
                    <fullName>RADvision</fullName>
                </value>
                <value>
                    <fullName>Sony</fullName>
                </value>
                <value>
                    <fullName>VCON</fullName>
                </value>
                <value>
                    <fullName>VTel</fullName>
                </value>
                <value>
                    <fullName>Kedacom</fullName>
                </value>
                <value>
                    <fullName>ZTE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firewall_1_Renewal_Date__c</fullName>
        <description>Date when Profile service is up for Renewal</description>
        <label>Firewall 1 Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firewall_1__c</fullName>
        <description>Provides Customer Satifaction on Security Profile</description>
        <label>Firewall 1 Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Happy with solution no need to change</fullName>
                </value>
                <value>
                    <fullName>Would change - cost issue</fullName>
                </value>
                <value>
                    <fullName>Would change - funcational issue</fullName>
                </value>
                <value>
                    <fullName>Would change - other issue</fullName>
                </value>
                <value>
                    <fullName>Would change - perf issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firewall_2_Customer_Satisfaction__c</fullName>
        <description>Provides Customer Satifaction on Security Profile</description>
        <label>Firewall 2 Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Happy with solution no need to change</fullName>
                </value>
                <value>
                    <fullName>Would change - cost issue</fullName>
                </value>
                <value>
                    <fullName>Would change - funcational issue</fullName>
                </value>
                <value>
                    <fullName>Would change - other issue</fullName>
                </value>
                <value>
                    <fullName>Would change - perf issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firewall_2_Renewal_Date__c</fullName>
        <description>Date when Profile service is up for Renewal</description>
        <label>Firewall 2 Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firewall_2__c</fullName>
        <description>Current Profile type deployed for this Account</description>
        <label>Firewall 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Astaro</fullName>
                </value>
                <value>
                    <fullName>Check Point</fullName>
                </value>
                <value>
                    <fullName>Cisco ASA</fullName>
                </value>
                <value>
                    <fullName>Fortinet</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Juniper</fullName>
                </value>
                <value>
                    <fullName>NETASQ</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Palo Alto</fullName>
                </value>
                <value>
                    <fullName>phion</fullName>
                </value>
                <value>
                    <fullName>SonicWall</fullName>
                </value>
                <value>
                    <fullName>Stonesoft</fullName>
                </value>
                <value>
                    <fullName>Watchguard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firewall__c</fullName>
        <description>Current Profile type deployed for this Account</description>
        <label>Firewall 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Astaro</fullName>
                </value>
                <value>
                    <fullName>Check Point</fullName>
                </value>
                <value>
                    <fullName>Cisco ASA</fullName>
                </value>
                <value>
                    <fullName>Fortinet</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Juniper</fullName>
                </value>
                <value>
                    <fullName>NETASQ</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Palo Alto</fullName>
                </value>
                <value>
                    <fullName>phion</fullName>
                </value>
                <value>
                    <fullName>SonicWall</fullName>
                </value>
                <value>
                    <fullName>Stonesoft</fullName>
                </value>
                <value>
                    <fullName>Watchguard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Security_Order__c</fullName>
        <description>Track when initial security order is placed with Cisco</description>
        <label>First Security Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Groupware__c</fullName>
        <label>Groupware</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exchange 5.5/2000</fullName>
                </value>
                <value>
                    <fullName>Exchange 2003</fullName>
                </value>
                <value>
                    <fullName>Planned Upgrade to Exchange 2003</fullName>
                </value>
                <value>
                    <fullName>Planned Upgrade to Exchange 2007</fullName>
                </value>
                <value>
                    <fullName>Notes Domino</fullName>
                </value>
                <value>
                    <fullName>Sendmail SAMS</fullName>
                </value>
                <value>
                    <fullName>iPlanet</fullName>
                </value>
                <value>
                    <fullName>Novell Groupwise</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPS_Customer_Satisfaction__c</fullName>
        <description>Provides Customer Satifaction on Security Profile</description>
        <label>IPS Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Happy with solution no need to change</fullName>
                </value>
                <value>
                    <fullName>Would change - cost issue</fullName>
                </value>
                <value>
                    <fullName>Would change - funcational issue</fullName>
                </value>
                <value>
                    <fullName>Would change - other issue</fullName>
                </value>
                <value>
                    <fullName>Would change - perf issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPS_Renewal_Date__c</fullName>
        <description>Date when Profile service is up for Renewal</description>
        <label>IPS Renewal Date</label>
        <type>Date</type>
    </fields>
</CustomObject>